[gd_scene load_steps=2 format=3 uid="uid://bus6e712ij5qc"]

[ext_resource type="Script" path="res://main/home/world_selection.gd" id="1_cep2k"]

[node name="World Selection" type="Control" node_paths=PackedStringArray("world_display_vbox", "join_world_button", "edit_world_button", "host_world_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cep2k")
world_display_vbox = NodePath("ScrollContainer/VBoxContainer")
join_world_button = NodePath("JoinWorldButton")
edit_world_button = NodePath("EditWorldButton")
host_world_button = NodePath("HostWorldButton")

[node name="TitleRichLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 12.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Worlds"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -315.0
offset_top = 68.0
offset_right = 315.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="JoinWorldButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 325.0
offset_top = 68.0
offset_right = 531.0
offset_bottom = 138.0
grow_horizontal = 2
disabled = true
text = "Join"

[node name="EditWorldButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 325.0
offset_top = 145.0
offset_right = 531.0
offset_bottom = 215.0
grow_horizontal = 2
disabled = true
text = "Edit"

[node name="HostWorldButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 325.0
offset_top = 224.0
offset_right = 531.0
offset_bottom = 294.0
grow_horizontal = 2
disabled = true
text = "Host"

[node name="NewWorldButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -99.0
offset_right = -10.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "New World"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -99.0
offset_right = 192.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="JoinWorldButton" to="." method="_on_join_world_button_pressed"]
[connection signal="pressed" from="EditWorldButton" to="." method="_on_edit_world_button_pressed"]
[connection signal="pressed" from="HostWorldButton" to="." method="_on_host_world_button_pressed"]
[connection signal="pressed" from="NewWorldButton" to="." method="_on_new_world_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
